emulation/jitsi-kubernetes/dev/nginx-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-staging
  namespace: jitsi
spec:
  tls:
  - hosts:
    - jitsicluster.eastus.cloudapp.azure.com # CHANGE THIS TO DNS NAME OF YOUR ingress-nginx PUBLIC IP
    secretName: tls-secret-stg
  rules:
  - host: jitsicluster.eastus.cloudapp.azure.com # CHANGE THIS TO DNS NAME OF YOUR ingress-nginx PUBLIC IP
    http:
      paths:
      - path: /
        backend:
          serviceName: web
          servicePort: 80
